--- a/cw03/zad2/Makefile
+++ b/cw03/zad2/Makefile
@@ -1,27 +1,28 @@
 CC = gcc
-CFLAGS = -std=c11 -Wall -Werror -g
+CFLAGS = -Wall
 
-all: clean test clean_wn
+all: clean test clean_after
 
 test:
-	@printf "Szerokość: 0.0002, n = 10000\n" | tee -a pomiar_zad_2.txt
+	@printf "Szerokosc: 0.0005, n = 2000\n" | tee -a pomiar_zad_2.txt
 	@$(CC) $(CFLAGS) main.c -o main
-	@(time ./main 0.00001 10000) 2>&1 | tee -a pomiar_zad_2.txt
+	@(time ./main 0.0005 2000) 2>&1 | tee -a pomiar_zad_2.txt
 	@printf "\n\n" | tee -a pomiar_zad_2.txt
 	
-	@printf "Szerokość: 0.0001, n = 20000\n" | tee -a pomiar_zad_2.txt
+	@printf "Szerokosc: 0.00025, n = 4000\n" | tee -a pomiar_zad_2.txt
 	@$(CC) $(CFLAGS) main.c -o main
-	@(time ./main 0.00002 20000) 2>&1 | tee -a pomiar_zad_2.txt
+	@(time ./main 0.00025 4000) 2>&1 | tee -a pomiar_zad_2.txt
 	@printf "\n\n" | tee -a pomiar_zad_2.txt
 	
-	@printf "Szerokość: 0.00005, n = 30000\n" | tee -a pomiar_zad_2.txt
+	@printf "Szerokosc: 0.0002, n = 5000\n" | tee -a pomiar_zad_2.txt
 	@$(CC) $(CFLAGS) main.c -o main
-	@(time ./main 0.00003 30000) 2>&1 | tee -a pomiar_zad_2.txt
+	@(time ./main 0.0002 5000) 2>&1 | tee -a pomiar_zad_2.txt
 	@printf "\n" | tee -a pomiar_zad_2.txt
 
 
 clean:
-	@rm -f pomiar_zad_2.txt main w*
+	@rm -f w* main pomiar_zad_2.txt
 
-clean_wn:
-	@rm -f w*
+clean_after:
+	@rm -f w* main
+
