Add complete cw04-zad1

--- a/cw04/zad1/Makefile
+++ b/cw04/zad1/Makefile
@@ -4,8 +4,15 @@ CFLAGS = -Wall -Werror
 all: test clean
 
 test:
-	$(CC) $(CFLAGS) main.c -o main
-	./main pending
+	@$(CC) -c ./sigHelper.c
+	@ar cr libsigHelper.a sigHelper.o
+	@$(CC) $(CFLAGS) main.c -o main -L. -l:libsigHelper.a
+	@$(CC) $(CFLAGS) execTest.c -o execTest -L. -l:libsigHelper.a
+	@./main ignore
+	@./main handler
+	@./main mask
+	@./main pending
 
 clean:
-	@rm -f main
+	@rm -f main execTest libsigHelper.a sigHelper.o
+
