Fix cw04-zad3b Makefile: hide compilation messages

--- a/cw04/zad3b/Makefile
+++ b/cw04/zad3b/Makefile
@@ -9,13 +9,13 @@ test: $(OBJS)
 	@$(CC) $(CFLAGS) sender.o sigHelper.o -o sender
 
 catcher.o: catcher.c
-	$(CC) $(CFLAGS) -c catcher.c
+	@$(CC) $(CFLAGS) -c catcher.c
 
 sender.o: sender.c
-	$(CC) $(CFLAGS) -c sender.c
+	@$(CC) $(CFLAGS) -c sender.c
 
 sigHelper.o: sigHelper.c sigHelper.h
-	$(CC) $(CFLAGS) -c sigHelper.c
+	@$(CC) $(CFLAGS) -c sigHelper.c
 
 clean:
 	@rm -f catcher.o sender.o sigHelper.o
