Change cw05-zad3: add all test cases (without a report yet)

--- a/cw05/zad3/Makefile
+++ b/cw05/zad3/Makefile
@@ -11,6 +11,11 @@ test: $(OBJS)
 	@make compile_producer_and_consumer --no-print-directory
 	@printf "Running five producers and one consumer:\n"
 	@make test_five_producers_one_consumer --no-print-directory
+	@rm -f pipe
+	@mkfifo pipe
+	@make test_n_5 --no-print-directory
+	@make test_n_500 --no-print-directory
+	@make test_n_5000 --no-print-directory
 
 compile_producer_and_consumer: $(OBJS)
 	@$(CC) $(CFLAGS) producer.o common.o -o producer
@@ -34,21 +39,133 @@ common.o: common.c common.h
 	@$(CC) $(CFLAGS) -c common.c
 
 test_five_producers_one_consumer:
+	@truncate -s 0 ./files/writeFile.txt
 	./runOneConsumerFiveProducers
-	@make run_tester --no-print-directory
+	@make run_tester_n_5 --no-print-directory
 
-test_producer:
+test_n_5:
+	@printf "Many producers, one consumer:\n"
+	@truncate -s 0 ./files/writeFile.txt
 	for number in 1 2 3 4 5 ; do \
-		(./producer ./pipe $$number ./files/N=5/file$$number.txt $(N1) &) ; \
+		(./producer ./pipe $$number ./files/N5/file$$number.txt $(N1) &) ; \
 	done
-
-test_consumer:
 	./consumer ./pipe ./files/writeFile.txt $(N1)
+	@make run_tester_n_5 --no-print-directory
+	
+	@truncate -s 0 ./files/writeFile.txt
+	@printf "One producer, many consumers:\n"
+	for number in 1 2 3 4 5 ; do \
+		(./consumer ./pipe ./files/writeFile.txt $(N1) &) ; \
+	done
+	./producer ./pipe 1 ./files/N5/file1.txt $(N1)
+	@make run_tester_n_5_one_line --no-print-directory
+	
+	@truncate -s 0 ./files/writeFile.txt
+	@printf "Many producer, many consumers:\n"
+	for number in 1 2 3 4 5 ; do \
+		(./producer ./pipe $$number ./files/N5/file$$number.txt $(N1) &) ; \
+	done
+	
+	for number in 1 2 3 4 ; do \
+		(./consumer ./pipe ./files/writeFile.txt $(N1) &) ; \
+	done
+	
+	./consumer ./pipe ./files/writeFile.txt $(N1)
+	@make run_tester_n_5 --no-print-directory
 
-run_tester:
+test_n_500:
+	@printf "Many producers, one consumer:\n"
+	@truncate -s 0 ./files/writeFile.txt
+	for number in 1 2 3 4 5 ; do \
+		(./producer ./pipe $$number ./files/N500/file$$number.txt $(N2) &) ; \
+	done
+	./consumer ./pipe ./files/writeFile.txt $(N2)
+	@make run_tester_n_500 --no-print-directory
+	
+	@truncate -s 0 ./files/writeFile.txt
+	@printf "One producer, many consumers:\n"
+	for number in 1 2 3 4 5 ; do \
+		(./consumer ./pipe ./files/writeFile.txt $(N2) &) ; \
+	done
+	./producer ./pipe 1 ./files/N500/file1.txt $(N2)
+	@make run_tester_n_500_one_line --no-print-directory
+	
+	@truncate -s 0 ./files/writeFile.txt
+	@printf "Many producer, many consumers:\n"
+	for number in 1 2 3 4 5 ; do \
+		(./producer ./pipe $$number ./files/N500/file$$number.txt $(N2) &) ; \
+	done
+	
+	for number in 1 2 3 4 ; do \
+		(./consumer ./pipe ./files/writeFile.txt $(N2) &) ; \
+	done
+	
+	./consumer ./pipe ./files/writeFile.txt $(N2)
+	@make run_tester_n_500 --no-print-directory
+
+test_n_5000:
+	@printf "Many producers, one consumer:\n"
+	@truncate -s 0 ./files/writeFile.txt
+	for number in 1 2 3 4 5 ; do \
+		(./producer ./pipe $$number ./files/N5000/file$$number.txt $(N3) &) ; \
+	done
+	./consumer ./pipe ./files/writeFile.txt $(N3)
+	@make run_tester_n_5000 --no-print-directory
+	
+	@truncate -s 0 ./files/writeFile.txt
+	@printf "One producer, many consumers:\n"
+	for number in 1 2 3 4 5 ; do \
+		(./consumer ./pipe ./files/writeFile.txt $(N3) &) ; \
+	done
+	./producer ./pipe 1 ./files/N5000/file1.txt $(N3)
+	@make run_tester_n_5000_one_line --no-print-directory
+	
+	@truncate -s 0 ./files/writeFile.txt
+	@printf "Many producer, many consumers:\n"
+	for number in 1 2 3 4 5 ; do \
+		(./producer ./pipe $$number ./files/N5000/file$$number.txt $(N3) &) ; \
+	done
+	
+	for number in 1 2 3 4 ; do \
+		(./consumer ./pipe ./files/writeFile.txt $(N3) &) ; \
+	done
+	
+	./consumer ./pipe ./files/writeFile.txt $(N3)
+	@make run_tester_n_5000 --no-print-directory
+
+run_tester_n_5_one_line:
+	@printf "Running tester:\n"
+	./tester ./files/N5/file1.txt ./files/writeFile.txt 1
+	@printf "\n"
+
+run_tester_n_5:
 	@printf "Running tester:\n"
 	for number in 1 2 3 4 5 ; do \
 		(./tester ./files/N5/file$$number.txt ./files/writeFile.txt $$number) ; \
+	done
+	@printf "\n"
+
+run_tester_n_500_one_line:
+	@printf "Running tester:\n"
+	./tester ./files/N500/file1.txt ./files/writeFile.txt 1
+	@printf "\n"
+
+run_tester_n_500:
+	@printf "Running tester:\n"
+	for number in 1 2 3 4 5 ; do \
+		(./tester ./files/N500/file$$number.txt ./files/writeFile.txt $$number) ; \
+	done
+	@printf "\n"
+
+run_tester_n_5000_one_line:
+	@printf "Running tester:\n"
+	./tester ./files/N5000/file1.txt ./files/writeFile.txt 1
+	@printf "\n"
+
+run_tester_n_5000:
+	@printf "Running tester:\n"
+	for number in 1 2 3 4 5 ; do \
+		(./tester ./files/N5000/file$$number.txt ./files/writeFile.txt $$number) ; \
 	done
 	@printf "\n"
 
