Add complete cw06-zad1

--- a/cw06/zad1/Makefile
+++ b/cw06/zad1/Makefile
@@ -2,10 +2,7 @@ CC = gcc
 CFLAGS = -Wall
 OBJS = server.o client.o common.o
 
-all: ipcrm compile clean
-
-ipcrm:
-	@ipcrm --all=msg
+all: compile clean
 
 compile: $(OBJS)
 	@$(CC) $(CFLAGS) server.o common.o -o server
