Add complete cw07

--- a/cw07/zad1/Makefile
+++ b/cw07/zad1/Makefile
@@ -22,11 +22,4 @@ common.o: common.c
 	$(CC) $(CFLAGS) -c common.c
 
 clean:
-	rm -rf $(OBJS)
-
-cle:
-	rm -rf main cook supplier
-
-clmem:
-	ipcrm --all=shm
-	ipcrm --all=sem
+	rm -f $(OBJS)
