--- a/cw07/zad2/Makefile
+++ b/cw07/zad2/Makefile
@@ -23,10 +23,4 @@ common.o: common.c
 	$(CC) $(CFLAGS) -c common.c
 
 clean:
-	rm -rf $(OBJS)
-
-cle:
-	rm -rf main cook supplier
-
-clmem:
-	rm /dev/shm/*
+	rm -f $(OBJS)
