Change cw08: block method working correctly

--- a/cw08/Makefile
+++ b/cw08/Makefile
@@ -2,7 +2,7 @@ CC = gcc
 CFLAGS = -Wall -g
 LIBS = -lpthread
 
-all: compile run
+all: compile run_v
 
 compile:
 	$(CC) $(CFLAGS) main.c -o main $(LIBS)
@@ -10,7 +10,7 @@ compile:
 run:
 	#./main 3 block image.pgm image_neg.pgm
 	#./main 3 block image1.pgm image1_neg.pgm
-	./main 16 numbers image2.pgm image2_neg.pgm
+	#./main 16 numbers image2.pgm image2_neg.pgm
 
 run_v:
 	#valgrind -s --leak-check=full --show-leak-kinds=all ./main 4 numbers image.pgm image_neg.pgm
@@ -18,8 +18,7 @@ run_v:
 	#valgrind -s --leak-check=full --show-leak-kinds=all ./main 16 numbers image1.pgm image1_neg.pgm
 	#valgrind -s --leak-check=full --show-leak-kinds=all ./main 16 block image1.pgm image1_neg.pgm
 	#valgrind -s --leak-check=full --show-leak-kinds=all ./main 16 numbers image2.pgm image2_neg.pgm
-	#valgrind -s --leak-check=full --show-leak-kinds=all ./main 16 block image2.pgm image2_neg.pgm
-
+	valgrind -s --leak-check=full --show-leak-kinds=all ./main 16 block image2.pgm image2_neg.pgm
 
 clean:
 	rm -f main
